SERVER-85268 Fix "Profiler entry does not contain" errors when the Bonsai plan cache is enabled

GitOrigin-RevId: 3d2443de96d05fde4cb5937c155dff31924c2e26