jstests/noPassthrough/log_and_profile_query_hash_no_indexes.js
@@ -1,11 +1,12 @@
 /**
  * Confirms that profiled find queries and corresponding logs have matching queryHashes.
+ * Same as log_and_profile_query_hash.js, but runs on a collection with no indexes to test the
+ * Bonsai plan cache on M2-eligible queries.
+ *
  * @tags: [
  *  does_not_support_stepdowns,
  *  requires_profiling,
  *  assumes_read_preference_unchanged,
- *  # TODO SERVER-85564: support query hash in slow query log lines in Bonsai M4.
- *  cqf_experimental_incompatible,
  * ]
  */
 import {getLatestProfilerEntry} from "jstests/libs/profiler.js";
@@ -21,11 +22,8 @@ assert.neq(null, conn, "mongod was unable to start up");
 const testDB = conn.getDB("jstests_query_shape_hash");
 const coll = testDB.test;
 
-const profileEntryFilter = {
-    op: "query"
-};
-
 assert.commandWorked(testDB.setProfilingLevel(2, {"slowms": 0}));
+// Set log level to the default of 0 to include informational messages about the query.
 assert.commandWorked(testDB.setLogLevel(0, "query"));
 
 // Parses the logLine and profileEntry into similar string representations with no white spaces.
@@ -57,9 +55,10 @@ function runTestsAndGetHashes(db, {comment, test}) {
     assert.commandWorked(db.adminCommand({clearLog: "global"}));
     assert.doesNotThrow(() => test(db, comment));
     const log = assert.commandWorked(db.adminCommand({getLog: "global"})).log;
-    const profileEntry = getLatestProfilerEntry(testDB, {op: "query", "command.comment": comment});
+    const profileEntry = getLatestProfilerEntry(db, {op: "query", "command.comment": comment});
     // Parse the profile entry to retrieve the corresponding log entry.
     const logLine = retrieveLogLine(log, profileEntry);
+    print(tojson(logLine));
     assert.neq(logLine, null);
 
     assert(profileEntry.hasOwnProperty("queryHash"), profileEntry);
@@ -71,13 +70,11 @@ function runTestsAndGetHashes(db, {comment, test}) {
     return {queryHash: profileEntry["queryHash"], planCacheKey: profileEntry["planCacheKey"]};
 }
 
-// Add data and indices.
+// Add data.
 const nDocs = 200;
 for (let i = 0; i < nDocs; i++) {
     assert.commandWorked(coll.insert({a: i, b: -1, c: 1}));
 }
-assert.commandWorked(coll.createIndex({a: 1}));
-assert.commandWorked(coll.createIndex({b: 1}));
 
 const queryA = {
     a: {$gte: 3},
@@ -87,26 +84,27 @@ const queryB = {
     a: {$gte: 199},
     b: -1
 };
+const queryC = {
+    a: {$lt: 100},
+    b: -1
+};
 const projectionB = {
     _id: 0,
     b: 1
-};
-const sortC = {
-    c: -1
 };
 
 const testList = [
     {
         comment: "Test0 find query",
         test: function(db, comment) {
-            assert.eq(200, db.test.find().comment(comment).itcount());
+            assert.eq(100, coll.find(queryC).comment(comment).itcount());
         },
     },
     {
         comment: "Test1 find query",
         test: function(db, comment) {
             assert.eq(1,
-                      db.test.find(queryB, projectionB).sort(sortC).comment(comment).itcount(),
+                      coll.find(queryB, projectionB).comment(comment).itcount(),
                       'unexpected document count');
         },
     },
@@ -114,7 +112,7 @@ const testList = [
         comment: "Test2 find query",
         test: function(db, comment) {
             assert.eq(0,
-                      db.test.find(queryA, projectionB).sort(sortC).comment(comment).itcount(),
+                      coll.find(queryA, projectionB).comment(comment).itcount(),
                       'unexpected document count');
         },
     }
@@ -126,27 +124,7 @@ const hashValues = testList.map((testCase) => runTestsAndGetHashes(testDB, testC
 assert.neq(hashValues[0], hashValues[1]);
 assert.eq(hashValues[1], hashValues[2]);
 
-// Test that the expected 'planCacheKey' and 'queryHash' are included in the transitional
-// log lines when an inactive cache entry is created.
-assert.commandWorked(testDB.setLogLevel(1, "query"));
-const testInactiveCreationLog = {
-    comment: "Test Creating inactive entry.",
-    test: function(db, comment) {
-        assert.eq(
-            0,
-            db.test.find({b: {$lt: 12}, a: {$eq: 500}}).sort({a: -1}).comment(comment).itcount(),
-            'unexpected document count');
-    },
-};
-const onCreationHashes = runTestsAndGetHashes(testDB, testInactiveCreationLog);
-const log = assert.commandWorked(testDB.adminCommand({getLog: "global"})).log;
-
-// Fetch the line that logs when an inactive cache entry is created for the query with
-// 'queryHash'. Confirm only one line does this.
-const creationLogList = log.filter(
-    logLine => (logLine.indexOf("Creating inactive cache entry for query") != -1 &&
-                logLine.indexOf('"planCacheKey":"' + String(onCreationHashes.planCacheKey)) != -1 &&
-                logLine.indexOf('"queryHash":"' + String(onCreationHashes.queryHash)) != -1));
-assert.eq(1, creationLogList.length);
+// We currently do not check whether a cache entry is active or inactive, as only one potential
+// collection scan plan can be generated for M2-eligible queries.
 
 MongoRunner.stopMongod(conn);
